--- a/load-balancer/nginx.conf
+++ b/load-balancer/nginx.conf
@@ -9,7 +9,13 @@ http {
     server backend3:3000;
  }
  server {
+    gzip on;
+    gzip_types      text/plain application/xml;
+    gzip_proxied    no-cache no-store private expired auth;
+    gzip_min_length 1000;
+    
     listen 8080;
+    
     server_name localhost;
     location / {
       proxy_pass http://localhost;
